# rbit

./: .gitattributes  BEP.txt  BEP52_V2_AUDIT.txt  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  PLAN-BEP42-BEP19-BEP55.md  README.md  SECURITY.md  clippy.toml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
src/: bandwidth.rs  bencode.rs  cache.rs  constants.rs  dht.rs  lib.rs  lsd.rs  metainfo.rs  peer.rs  pex.rs  storage.rs  tracker.rs  upnp.rs  webseed.rs
src/bencode/: decode.rs  encode.rs  error.rs  tests.rs  value.rs
src/cache/: block_cache.rs  buffer_pool.rs  memory_budget.rs  piece_cache.rs
src/dht/: error.rs  message.rs  node.rs  node_id_security.rs  routing.rs  server.rs  tests.rs
src/metainfo/: builder.rs  error.rs  file_tree.rs  info_hash.rs  magnet.rs  merkle.rs  tests.rs  torrent.rs
src/peer/: bitfield.rs  choking.rs  connection.rs  error.rs  extension.rs  fast.rs  hash_request.rs  holepunch.rs  message.rs  metadata.rs  peer_id.rs  piece.rs  tests.rs  transport.rs
src/storage/: caching.rs  error.rs  file.rs  io.rs  manager.rs  tests.rs
src/tracker/: error.rs  http.rs  response.rs  tests.rs  udp.rs
