[package]
name = "rbit"
version = "0.1.2"
edition = "2021"
description = "A BitTorrent library implementing BEP specifications"
license = "MIT"
repository = "https://github.com/jasper/rbit"
documentation = "https://docs.rs/rbit"
readme = "README.md"
keywords = ["bittorrent", "torrent", "p2p", "dht", "peer-to-peer"]
categories = ["network-programming", "asynchronous"]
rust-version = "1.85"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Bytes and buffers
bytes = "1"

# Serialization
thiserror = "1"

# Crypto
sha1 = "0.10"
sha2 = "0.10"
rand = "0.9"

# Networking
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# Concurrency
parking_lot = "0.12"
dashmap = "6"
crossbeam = "0.8"

# Logging
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
